# py-vision

./: .gitignore  app.py  pyproject.toml
templates/: home.html  image_detection.html  video_detection.html
