[tool.poetry]
name = "vision"
version = "0.1.0"
description = "Python vision and object recognition and detection"
authors = ["cois78 <francois.harmse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
werkzeug = "^3.1.3"
pillow = "^11.0.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
numpy = "^1.26.3"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
requests = "^2.32.3"
flask-sock = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
